Fix publisher url on filter all Added a default author image and adds a no_image on the rest of the filters Changes css and html to simplify this listing, since they more or less are the same Added a option to display or not the alpha filter. Changed the truncate descripiton to a more global defined

--- a/ZC_INSTALLATION/includes/templates/[YOUR-TEMPLATE]/css/stylesheet_bookx.css
+++ b/ZC_INSTALLATION/includes/templates/[YOUR-TEMPLATE]/css/stylesheet_bookx.css
@@ -368,3 +368,20 @@ form.bxf_active select {
     .reset {
        background: #ddd;     
     }
+    
+    .bookxFilterListAll {
+            display: table;
+    }
+    .row {
+    margin-bottom: 1rem;
+}
+    .bookxAllListingImage {
+            float: left;
+            padding-right: 1rem;
+    }
+    .bookxAllListingInfo {
+           margin: 0; 
+    }
+    .bookxAllListingDescription{
+            
+    }
